# Icecube

./: CMakeLists.txt  README.md
scripts/: build.sh
src/: main.cpp
src/Core/: Core.cpp  Core.hpp  Endian.cpp  Endian.hpp  test  test.asm
src/Core/Cpu/: Cpu.cpp  Cpu.cpp.save  Cpu.hpp
src/Core/Dol/: Dol.cpp  Dol.cpp.save  Dol.hpp
src/Core/Ipl/: Ipl.cpp  Ipl.hpp
src/Core/Memory/: Mmu.cpp  Mmu.hpp
src/Core/VI/: Vi.cpp  Vi.hpp
